Delivers https://trello.com/c/7SZm1Y2D/44-as-an-app-developer-i-want-to-be-able-to-add-new-favorite
