# routes/favoriteRoutes.js
@@ -1,0 +1,6 @@
+const FavoritesController = require('../controllers/FavoritesController');
+
+module.exports = (app) => { 
+    app.route("/favorites")
+       .post(FavoritesController.addFavorite)
+}
